Implement multi-account support with separate MongoDB collections per account
- Add SocketManager for per-account WhatsApp socket lifecycle
- Add AccountManager for account CRUD operations
- Implement per-account dynamic routing with accountRouter
- Add management routes for global account operations
- Refactor index.js to initialize multi-account architecture
- Simplify server.js by removing socket coupling
- Fix mongoAuthState bug in app-state-sync-key handling
- Update API_DOCS.md with comprehensive v2.0 endpoints
- Rewrite README.md with architecture overview and quick start
- Bump version to 2.0.0 in package.json

Each account now uses its own MongoDB collection (auth_{accountId})
for complete data isolation. API endpoints are dynamically mounted
at /accounts/:accountId/ on account creation.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wildcat",
-  "version": "1.0.0",
-  "description": "Whatsapp Integration Layer for Data Connectivity and Transfer",
+  "version": "2.0.0",
+  "description": "Multi-Account WhatsApp Integration Layer for Data Connectivity and Transfer",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js"
