--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "link-preview-js": "^3.1.0",
     "mongo-baileys": "^1.0.1",
     "mongodb": "^6.20.0",
+    "multer": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0"
