--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WhatsApp Integration Layer for Data Connectivity and Transfer",
   "main": "index.js",
   "scripts": {
-    "countLines":"cat ./*.js | wc -l",
+    "countLines": "cat ./*.js | wc -l",
     "dev": "nodemon index.js",
     "start": "node index.js",
     "ping": "node scripts/cli.js ping",
@@ -40,6 +40,7 @@
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "axios": "^1.13.1",
+    "cloudinary": "^2.8.0",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "link-preview-js": "^3.1.0",
