--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,17 @@
-# # Example environment variables for Whatsapp_Unofficial_REST_API
-# DB_URL=mongodb://localhost:27017/whatsapp
-# MONGODB_URI=mongodb://localhost:27017/whatsapp
-# SESSION_ID=default
-# SERVER_HOST=0.0.0.0
-# SERVER_PORT=3000
-# LOG_LEVEL=info
+# Wildcat WhatsApp Integration Environment Variables
 
-# # Media storage configuration
-# # Set MEDIA_STORAGE to 'cloudinary' or 'gridfs' to select your media backend
-# MEDIA_STORAGE=gridfs # or 'cloudinary'
+# Server Configuration
+HOST=0.0.0.0
+PORT=3000
 
-# # --- Cloudinary configuration ---
-# # Only required if MEDIA_STORAGE=cloudinary
-# CLOUDINARY_CLOUD_NAME=your_cloud_name
-# CLOUDINARY_API_KEY=your_api_key
-# CLOUDINARY_API_SECRET=your_api_secret
-# CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
+# Database Configuration
+MONGO_URL=mongodb://localhost:27017
+DB_NAME=wildcat
 
-# # --- GridFS configuration ---
-# # Only required if MEDIA_STORAGE=gridfs
-# # No extra variables needed; uses DB_URL for MongoDB connection
-# # Example: DB_URL=mongodb://localhost:27017/whatsapp
+# Admin Notifications (Optional)
+# When set, sends a startup message to this number when the bot goes online
+ADMIN_NUMBER=1234567890@s.whatsapp.net
+ADMIN_ACCOUNT=youraccountid
 
-# # --- Puppeteer/whatsapp-web.js stability options ---
-# # Run Chromium without sandbox (containers/VMs)
-# WWEBJS_NO_SANDBOX=true
-# # Force headless mode
-# WWEBJS_HEADLESS=true
-# # Extra Chromium args (space-separated)
-# PUPPETEER_ARGS=--disable-dev-shm-usage --no-zygote --single-process
-# # Optionally point to system Chromium
-# # PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+# Logging
+LOG_LEVEL=info
