Simplify admin notification to send from all connected accounts
- Remove ADMIN_ACCOUNT requirement
- All connected sockets send startup message to ADMIN_NUMBER
- Message includes account ID for clarity
- Updated .env.example accordingly

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,8 @@ MONGO_URL=mongodb://localhost:27017
 DB_NAME=wildcat
 
 # Admin Notifications (Optional)
-# When set, sends a startup message to this number when the bot goes online
+# When set, all connected accounts send a startup message to this number
 ADMIN_NUMBER=1234567890@s.whatsapp.net
-ADMIN_ACCOUNT=youraccountid
 
 # Logging
 LOG_LEVEL=info
