Auto-connect on start when creds exist or AUTO_CONNECT_ON_START=true; persist account status to DB on socket events; add AUTO_CONNECT_ON_START to env example

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ ADMIN_NUMBER=1234567890@s.whatsapp.net
 
 # Logging
 LOG_LEVEL=info
+
+# Startup behavior
+# When true, attempts to auto-connect all restored accounts
+AUTO_CONNECT_ON_START=false
