--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://notoriousarnav.github.io/wildcat"
 
 # Theme & styling
 theme: jekyll-theme-minimal
-favicon: "/assets/favicon.ico"
+favicon: "/assets/favicon.svg"
 
 # Markdown settings
 markdown: kramdown
