Revert "docs: add professional SVG assets and update documentation with visual elements"
This reverts commit 702ba36fd564136374fd4de051dd9fd0e25b8f62.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://notoriousarnav.github.io/wildcat"
 
 # Theme & styling
 theme: jekyll-theme-minimal
-favicon: "/assets/favicon.svg"
+favicon: "/assets/favicon.ico"
 
 # Markdown settings
 markdown: kramdown
