docs: fix markdown formatting violations and standardize hyphenation
Fix 100+ markdown formatting issues across all documentation files:

- Add required blank lines before code blocks (MD031) in 13 files
- Standardize compound adjective hyphenation with non-breaking hyphens
  (e.g., 'step-by-step' → 'step‑by‑step', 'auto-connect' → 'auto‑connect')
- Fix YAML syntax in .coderabbit.yml path_filters
- Add missing 'created' status field in webhook response example

These changes improve documentation readability, ensure consistent markdown
rendering across parsers, and meet linting standards for GitHub Pages.

--- a/.coderabbit.yml
+++ b/.coderabbit.yml
@@ -30,18 +30,18 @@ reviews:
     - path: "**/*.md"
       instructions: |
         Check docs for accuracy with implemented routes and environment variables. Keep README and docs in sync with changes.
-ignore:
-  # Ignore large or generated files that create noise
-  - "node_modules/**"
-  - "**/*.lock"
-  - "**/*.min.*"
-  - "**/dist/**"
-  - "**/build/**"
-  - "**/.logs/**"
-  - "**/*.png"
-  - "**/*.jpg"
-  - "**/*.jpeg"
-  - "**/*.gif"
+  path_filters:
+    # Exclude large or generated files that create noise
+    - "!node_modules/**"
+    - "!**/*.lock"
+    - "!**/*.min.*"
+    - "!**/dist/**"
+    - "!**/build/**"
+    - "!**/.logs/**"
+    - "!**/*.png"
+    - "!**/*.jpg"
+    - "!**/*.jpeg"
+    - "!**/*.gif"
 
 # Optionally run linters/tools CodeRabbit can use
 # tools:
