--- a/package.json
+++ b/package.json
@@ -24,26 +24,22 @@
   },
   "homepage": "https://github.com/NotoriousArnav/wildcat#readme",
   "dependencies": {
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "axios": "^1.13.1",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "helmet": "^7.1.0",
     "link-preview-js": "^3.1.0",
-    "mongo-baileys": "^1.0.1",
     "mongodb": "^6.20.0",
     "multer": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
-    "typescript": "^5.9.3",
-    "uuid": "^13.0.0"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "tsx": "^4.20.6"
+    "knip": "^5.69.0",
+    "nodemon": "^3.1.10"
   },
   "overrides": {
     "glob": "^10.4.5"
