--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "wildcat",
   "version": "2.0.0",
   "description": "WhatsApp Integration Layer for Data Connectivity and Transfer",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon index.js",
